// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-list> Component basic usage 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list custom separator color 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="solid"
           align="start"
           valign="center"
           style="--bolt-list-item-border-color: red;"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-solid c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: block 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: flex 1`] = `
<bolt-list tag="ul"
           display="flex"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-flex c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-flex c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@medium 1`] = `
<bolt-list tag="ul"
           display="inline@medium"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline@medium c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@medium c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@small 1`] = `
<bolt-list tag="ul"
           display="inline@small"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline@small c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@small c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@xsmall 1`] = `
<bolt-list tag="ul"
           display="inline@xsmall"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline@xsmall c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list display: inline@xxsmall 1`] = `
<bolt-list tag="ul"
           display="inline@xxsmall"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline@xxsmall c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline@xxsmall c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list inset spacing: false 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list inset spacing: true 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           inset
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--inset">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item c-bolt-list-item--inset">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: center 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="center"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-center c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: end 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="end"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-end c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: justify 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="justify"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-justify c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items horizontal alignment: start 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: center 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: end 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="end"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-end">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list items vertical alignment: start 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="start"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-start">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list nowrap: false 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 4
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 5
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 6
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 7
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 8
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 9
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 10
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 11
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 12
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 13
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 14
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 15
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 16
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 17
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 18
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 19
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list nowrap: true 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           nowrap
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--nowrap">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 4
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 5
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 6
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 7
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 8
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 9
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 10
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 11
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 12
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 13
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 14
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 15
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 16
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 17
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 18
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 19
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: dashed 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="dashed"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-dashed c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list separator: solid 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="solid"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-solid c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: large 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="large"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-large c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: medium 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="medium"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-medium c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="none"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: small 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="small"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xlarge 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xlarge"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xlarge c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list spacing: xxsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xxsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xxsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: div 1`] = `
<bolt-list tag="div"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <div class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </span>
      </bolt-list-item>
      <bolt-list-item>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </span>
      </bolt-list-item>
      <bolt-list-item last>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </span>
      </bolt-list-item>
    </ssr-keep>
  </div>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: ol 1`] = `
<bolt-list tag="ol"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ol class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ol>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: span 1`] = `
<bolt-list tag="span"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <span class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </span>
      </bolt-list-item>
      <bolt-list-item>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </span>
      </bolt-list-item>
      <bolt-list-item last>
        <span class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </span>
      </bolt-list-item>
    </ssr-keep>
  </span>
</bolt-list>
`;

exports[`<bolt-list> Component list tag: ul 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 1
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            item 2
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            item 3
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;
